public/css/content_recommender.css
/* Styles specific to content recommender dashboard */
.colWatched {
	width: 120px;
}
th:last-child, td:last-child {
	text-align: center;
}

table {
	width: 100%;
}
table img, td img {
	max-width: 100%;
}

td {
	word-wrap: break-word;
	/* Have to override bootstrap */
	vertical-align: middle!important;
}

.videoProgressCell, .questionCorrectCell, .questionAttemptsCell {
	text-align: center;
}

.questionNumberCell, .videoRefCell {
	text-align: right;
}

.questionTextCell img {
	/* Don't let images in questions break the table layout */
	max-width: 150px;
}

.questionLaunchCell {
	font-size: 150%;
}

.progressCircle {
	border: none;
	background: transparent;
}

/* Concepts */
.conceptsList div {
	padding: 10px;
	color: #222;
	border-bottom: solid rgba(255, 255, 255, 0.7) 1px;
}
.conceptsList div:first-child {
	border-top-left-radius: 6px;
	border-top-right-radius: 6px;
}

.conceptsList div:last-child {
	border-bottom-left-radius: 6px;
	border-bottom-right-radius: 6px;
	border-bottom: none;
}

/* Recommendations */
.recommendInfo {
	font-style: italic;
}

.recommendInfo .glyphicon {
	font-size: 150%;
	line-height: 100%;
	float: left;
	margin: 5px 15px 10px 10px;
}

#recommendTabs li {
	max-width: 23%;
}

.recommendQuestionDisplay button {
	margin: 5px;
}
.recommendQuestionDisplay .label {
	margin-left: 5px;
}

.recommendQuestionInfoTable span span:first-child {
	text-align: right;
	width: 100px;
	padding-right: 5px;
}

.recommendPanelBody {
	max-height: 360px;
	overflow: auto;
}

#recommendSection .panel-heading {
	cursor: pointer;
}

#recommendSection tr {
	border-bottom: 1px solid #ddd!important;
}

#recommendSection td {
	padding: 5px;
	max-width: 40%!important;
}
.correctIcon {
	color: #5cb85c;
}
.incorrectIcon {
	color: #d9534f;
}
.correct-falseHolder .correctIcon {
	display: none;
}
.correct-trueHolder .incorrectIcon {
	display: none;
}

/* Scatterplot */
.axis path, .axis line {
	fill: none;
	stroke: black;
	shape-rendering: crispEdges;
}

.axis text {
	font-family: sans-serif;
	font-size: 11px;
}

.quadrantLine {
	fill: none;
	stroke:gray;
	shape-rendering: crispEdges;
}

.quadrant {
	fill: transparent;
}
.activeQuadrant {
	fill: #ddd;
}

.quadrantInfo {
	float: right;
	padding-right: 50px;
}

.studentPoint:hover {
	r: 10px;
}

.classPoint {
	pointer-events: none;
}
.classPoint:hover {
	r: 6px;
}

.scopeOptionLabel select {
	display: none;
	background: transparent;
	border: solid white 1px;
	height: 100%;
	text-shadow: 0 1px 0 #fff;
}
.scopeOptionLabel.active select {
	display: inline!important;
}

/* Mastery Graph */
.svgContainer {
	max-width: 100%;
	max-height: 100%;
	width: 100%;
	height: 100%;
	overflow: auto;
}

/* Advanced */
/* Classes to hide certain elements until the corresponding option is toggled on */
.advancedMore, .advancedMoreClass, .advancedScatterplot, .advancedScatterplotClass, .advancedMasteryGraph, .advancedAll {
	display: none;
}

